# rpg

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
include/: ability.h  buff.h  character.h  data_type.h  stat.h  stat_well.h  stats.h
src/: buff.cpp  stat_well.cpp  stats.cpp
